# AgentLatch

./: .agentlatch_example.db  .complex_dag_memory.db  .gitignore  .groq_memory.db  .pre-commit-config.yaml  INSTRUCTIONS.md  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  publish.yml
agentlatch/: __init__.py  _types.py  banner.py  config.py  decorators.py  langgraph.py  middleware.py  renderer.py  sampler.py  tracker.py
agentlatch.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
agentlatch/memory/: __init__.py  backend.py  context.py  decorators.py  sqlite_backend.py
agentlatch/plans/: README.md  __init__.py  phase_10_memory_pipeline.md  phase_1_scaffolding.md  phase_2_tracker.md  phase_3_decorators.md  phase_4_renderer.md  phase_5_banner.md  phase_6_config.md  phase_7_sampler.md  phase_8_middleware.md  phase_9_testing.md
examples/: README.md  complex_multiagent_dag.py  fastapi_agent.py  groq_customer_support_bot.py  groq_langgraph_agent.py  langgraph_agent.py  memory_langgraph_agent.py  vanilla_agent.py
plans/: README.md  phase_1_scaffolding.md  phase_4_renderer.md  phase_5_banner.md  phase_9_testing.md
tests/: conftest.py  test_banner.py  test_context_aware.py  test_decorators.py  test_intent.py  test_langgraph.py  test_memory_backend.py  test_middleware.py  test_precision_logs.py  test_renderer.py  test_sampler.py  test_tracker.py
