[build-system]
requires = ["setuptools>=68.0", "wheel", "rich>=13.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentlatch"
version = "0.1.0"
description = "Zero-dependency, terminal-native Python middleware for resilient and observable AI agents."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "AgentLatch Contributors"}
]
keywords = ["agents", "llm", "observability", "middleware", "terminal"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/arav7781/AgentLatch"
Repository = "https://github.com/arav7781/AgentLatch"
Issues = "https://github.com/arav7781/AgentLatch/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]
server = [
    "starlette>=0.27",
    "httpx>=0.24",
]

[tool.setuptools.packages.find]
include = ["agentlatch*"]

[tool.setuptools.package-data]
agentlatch = ["plans/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade (modern Python syntax)
]
ignore = [
    "E501",  # Line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["agentlatch"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

